<resources>
    <string name="app_name">Assets</string>
    <string name="form_name">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="id_number">ID Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="email">user@mail.com</string>
    <string name="phone_sample">0700000000</string>
    <string name="id_sample">123456789</string>
    <string name="dob_sample">YYYY-MM-DD</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="pwd">Password</string>
    <string name="items_form">Items</string>
    <string name="item_name">Item Name</string>
    <string name="Value">Value</string>
    <string name="description">Description</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="locations_form">Locations</string>
    <string name="location_name">Name of Location</string>
    <string name="responsibility">Responsibility</string>
    <string name="user_id">User ID</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="home">Home</string>
    <string name="add"><u>+ Add New Records</u></string>
    <string name="view"><u>- View All Records</u></string>
    <string name="create_account"><u>No Account? Create a new Account</u></string>
    <string name="add_user">Add Users</string>
    <string name="add_location">Add Locations</string>
    <string name="add_items">Add Items</string>
    <string name="add_responsibility">Add Roles</string>
    <string name="view_user">View Users</string>
    <string name="view_location">View Locations</string>
    <string name="view_items">View Items</string>
    <string name="view_responsibility">View Roles</string>
</resources>
