<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:isScrollContainer="true"
    android:orientation="vertical"
    tools:context=".SignUpActivity"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/form_name"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp" />

            <View
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:background="@drawable/layout_background"
                android:orientation="vertical"
                android:padding="16dp"
                android:elevation="1dp">

                <TextView
                    android:id="@+id/textViewFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="19sp" />

                <EditText
                    android:id="@+id/editTextFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:ems="10"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/textViewLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="19sp" />

                <EditText
                    android:id="@+id/editTextLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:ems="10"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/textViewPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:textColor="@color/colorPrimary"
                    android:textSize="19sp" />

                <EditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:ems="10"
                    android:hint="@string/phone_number"
                    android:inputType="phone" />

                <TextView
                    android:id="@+id/textViewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/id_number"
                    android:textColor="@color/colorPrimary"
                    android:textSize="19sp" />

                <EditText
                    android:id="@+id/editTextID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:ems="10"
                    android:hint="@string/id_sample"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/textViewDOB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dob"
                    android:textColor="@color/colorPrimary"
                    android:textSize="19sp" />

                <EditText
                    android:id="@+id/editTextDOB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:ems="10"
                    android:hint="@string/dob_sample"
                    android:inputType="date" />

                <TextView
                    android:id="@+id/textViewAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email_address"
                    android:textColor="@color/colorPrimary"
                    android:textSize="19sp" />

                <EditText
                    android:id="@+id/editTextAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/textViewGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textColor="@color/colorPrimary"
                    android:textSize="19sp" />

                <EditText
                    android:id="@+id/editTextGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:ems="10"
                    android:hint="@string/gender"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:drawableLeft="@android:drawable/ic_menu_send"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/submit"
                android:textColor="@color/colorWhite"
                android:background="@drawable/button_shape"
                android:elevation="1dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
