<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:isScrollContainer="true"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/login"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp" />

    <View
        android:layout_width="78dp"
        android:layout_height="2dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/layout_background"
        android:elevation="1dp"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:textColor="@color/colorPrimary"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pwd"
            android:textColor="@color/colorPrimary"
            android:textSize="19sp" />


        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/pwd"
            android:inputType="textPassword" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/create_account"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@drawable/button_shape"
        android:drawableLeft="@android:drawable/ic_menu_send"
        android:elevation="1dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/submit"
        android:textColor="@color/colorWhite" />
</LinearLayout>