<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:isScrollContainer="true"
    android:orientation="vertical"
    tools:context=".ResponsibilityActivity"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtResponsibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/responsibility"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp" />

            <View
                android:layout_width="190dp"
                android:layout_height="2dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:background="@drawable/layout_background"
                android:orientation="vertical"
                android:padding="16dp"
                android:elevation="1dp">

                <TextView
                    android:id="@+id/textViewResponsibility"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_id"
                    android:textColor="@color/colorPrimary"
                    android:textSize="19sp" />

                <EditText
                    android:id="@+id/editTextResponsibility"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:ems="10"
                    android:hint="@string/user_id"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/textViewStartDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date"
                    android:textColor="@color/colorPrimary"
                    android:textSize="19sp" />

                <EditText
                    android:id="@+id/editTextStartDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:ems="10"
                    android:hint="@string/dob_sample"
                    android:inputType="date" />

                <TextView
                    android:id="@+id/textViewEndDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/end_date"
                    android:textColor="@color/colorPrimary"
                    android:textSize="19sp" />

                <EditText
                    android:id="@+id/editTextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:ems="10"
                    android:hint="@string/dob_sample"
                    android:inputType="date" />

                <TextView
                    android:id="@+id/textViewResDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="@color/colorPrimary"
                    android:textSize="19sp" />

                <EditText
                    android:id="@+id/editTextResDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:ems="10"
                    android:hint="@string/description"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <Button
                android:id="@+id/btnItemSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:background="@drawable/button_shape"
                android:drawableLeft="@android:drawable/ic_menu_send"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/submit"
                android:textColor="@color/colorWhite"
                android:elevation="1dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
